# istio_vms

./: BUILD.bazel  WORKSPACE  glide.yaml
cmd/cli/: BUILD.bazel
cmd/controller/: BUILD.bazel
cmd/registry/: BUILD.bazel
cmd/sidecar/: BUILD.bazel
controller/rules/: k8s.go
pkg/adapters/discovery/amalgam8/: BUILD.bazel
pkg/adapters/discovery/cache/: BUILD.bazel
pkg/adapters/discovery/eureka/: BUILD.bazel
pkg/adapters/discovery/filesystem/: BUILD.bazel
pkg/adapters/discovery/kubernetes/: BUILD.bazel  kubernetes.go  kubernetes.goe
pkg/adapters/rules/amalgam8/: BUILD.bazel
pkg/adapters/rules/kubernetes/: BUILD.bazel  kubernetes.go  routingrule.go
pkg/api/: BUILD.bazel  endpoint.go  instance.go
pkg/auth/: BUILD.bazel
pkg/datastructures/: BUILD.bazel
pkg/errors/: BUILD.bazel
pkg/kubernetes/: BUILD.bazel  client.go  workqueue.go
pkg/math/: BUILD.bazel
pkg/network/: BUILD.bazel
registry/: BUILD.bazel
registry/client/: BUILD.bazel  client.go
registry/client/test/: BUILD.bazel  client_bx.go
registry/client/test/model/: BUILD.bazel  service.go
registry/client/test/platform/vms/: BUILD.bazel  controller.go
registry/cluster/: BUILD.bazel
registry/config/: BUILD.bazel
registry/replication/: BUILD.bazel
registry/server/: BUILD.bazel
registry/server/env/: BUILD.bazel
registry/server/middleware/: BUILD.bazel
registry/server/protocol/: BUILD.bazel
registry/server/protocol/amalgam8/: BUILD.bazel  instance.go  instance_address.go  instance_handler.go  service_handler.go  services_list.go  util.go
registry/server/protocol/eureka/: BUILD.bazel
registry/server/uptime/: BUILD.bazel
registry/store/: BUILD.bazel  endpoint.go  error.go  inmem_catalog.go  instance.go  service.go
registry/store/eureka/: BUILD.bazel
registry/store/istio/: :q  BUILD.bazel  catalog.go  catalog_factory.go  catalog_map.go  inmem_catalog.go  service.go
registry/utils/channels/: BUILD.bazel
registry/utils/database/: BUILD.bazel
registry/utils/health/: BUILD.bazel
registry/utils/i18n/: BUILD.bazel
registry/utils/logging/: BUILD.bazel
registry/utils/metrics/: BUILD.bazel
registry/utils/reflection/: BUILD.bazel
sidecar/: BUILD.bazel
sidecar/config/: BUILD.bazel  config.go  default.go
sidecar/dns/: BUILD.bazel
sidecar/identity/: BUILD.bazel  kubernetes.go  kubernetes_test.go  static.go
sidecar/proxy/: BUILD.bazel
sidecar/proxy/envoy/: BUILD.bazel  manager.go
sidecar/proxy/envoy/discovery/: BUILD.bazel
sidecar/proxy/monitor/: BUILD.bazel
sidecar/register/: BUILD.bazel  registration.go
sidecar/register/healthcheck/: BUILD.bazel
sidecar/supervisor/: BUILD.bazel
sidecar/util/: BUILD.bazel
