load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["registry.go"],
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/adapters/discovery/filesystem:go_default_library",
        "//pkg/adapters/discovery/kubernetes:go_default_library",
        "//pkg/api:go_default_library",
        "//pkg/auth:go_default_library",
        "//pkg/kubernetes:go_default_library",
        "//pkg/network:go_default_library",
        "//pkg/version:go_default_library",
        "//registry/cluster:go_default_library",
        "//registry/config:go_default_library",
        "//registry/replication:go_default_library",
        "//registry/server:go_default_library",
        "//registry/store:go_default_library",
        "//registry/store/eureka:go_default_library",
        "//registry/utils/i18n:go_default_library",
        "//registry/utils/logging:go_default_library",
        "//registry/utils/metrics:go_default_library",
        "@com_github_Sirupsen_logrus//:go_default_library",
        "@com_github_urfave_cli//:go_default_library",
    ],
)
