load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "discovery.go",
        "endpoint.go",
        "filter.go",
        "instance.go",
        "registry.go",
        "rule.go",
        "rules.go",
        "ruleset.go",
        "validation.go",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_Sirupsen_logrus//:go_default_library",
        "@com_github_xeipuuv_gojsonschema//:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["filter_test.go"],
    library = ":go_default_library",
)
