load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "authenticator.go",
        "chain.go",
        "default.go",
        "errors.go",
        "jwt.go",
        "namespace.go",
        "trusted.go",
    ],
    visibility = ["//visibility:public"],
    deps = ["@com_github_dgrijalva_jwt_go//:go_default_library"],
)

go_test(
    name = "go_default_test",
    srcs = [
        "chain_test.go",
        "default_test.go",
        "trusted_test.go",
    ],
    library = ":go_default_library",
    deps = ["@com_github_stretchr_testify//assert:go_default_library"],
)
