load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "backend.go",
        "cluster.go",
        "config.go",
        "filesystem_backend.go",
        "health.go",
        "member.go",
        "membership.go",
        "memory_backend.go",
        "registrator.go",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//registry/utils/health:go_default_library",
        "//registry/utils/logging:go_default_library",
        "@com_github_Sirupsen_logrus//:go_default_library",
        "@com_github_rcrowley_go_metrics//:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = [
        "backend_test.go",
        "filesystem_backend_test.go",
        "health_test.go",
        "member_test.go",
        "membership_test.go",
        "memory_backend_test.go",
        "registrator_test.go",
    ],
    library = ":go_default_library",
    deps = [
        "@com_github_rcrowley_go_metrics//:go_default_library",
        "@com_github_stretchr_testify//assert:go_default_library",
        "@com_github_stretchr_testify//mock:go_default_library",
        "@com_github_stretchr_testify//require:go_default_library",
        "@com_github_stretchr_testify//suite:go_default_library",
    ],
)
