load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "client.go",
        "config.go",
        "decoder.go",
        "encoder.go",
        "event.go",
        "health.go",
        "replication.go",
        "replication_message.go",
        "replicator.go",
        "server.go",
        "sync_client.go",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/auth:go_default_library",
        "//registry/cluster:go_default_library",
        "//registry/utils/channels:go_default_library",
        "//registry/utils/health:go_default_library",
        "//registry/utils/logging:go_default_library",
        "@com_github_Sirupsen_logrus//:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = [
        "encoder_decoder_test.go",
        "health_test.go",
        "server_test.go",
    ],
    library = ":go_default_library",
    deps = [
        "//pkg/auth:go_default_library",
        "//pkg/network:go_default_library",
        "//registry/cluster:go_default_library",
        "@com_github_stretchr_testify//assert:go_default_library",
    ],
)

go_test(
    name = "go_default_xtest",
    srcs = ["replication_test.go"],
    deps = [
        ":go_default_library",
        "//pkg/network:go_default_library",
        "//registry/cluster:go_default_library",
        "//registry/server:go_default_library",
        "//registry/server/protocol/amalgam8:go_default_library",
        "//registry/store:go_default_library",
        "@com_github_stretchr_testify//assert:go_default_library",
    ],
)
