load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "config.go",
        "server.go",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/auth:go_default_library",
        "//registry/server/middleware:go_default_library",
        "//registry/server/protocol/amalgam8:go_default_library",
        "//registry/server/protocol/eureka:go_default_library",
        "//registry/server/uptime:go_default_library",
        "//registry/store:go_default_library",
        "//registry/utils/logging:go_default_library",
        "@com_github_Sirupsen_logrus//:go_default_library",
        "@com_github_ant0ine_go_json_rest//rest:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = [
        "amalgam8_test.go",
        "eureka_test.go",
        "server_test.go",
    ],
    library = ":go_default_library",
    deps = [
        "//pkg/auth:go_default_library",
        "//registry/server/protocol/amalgam8:go_default_library",
        "//registry/server/protocol/eureka:go_default_library",
        "//registry/server/uptime:go_default_library",
        "//registry/store:go_default_library",
        "//registry/utils/health:go_default_library",
        "//registry/utils/i18n:go_default_library",
        "@com_github_ant0ine_go_json_rest//rest:go_default_library",
        "@com_github_stretchr_testify//assert:go_default_library",
    ],
)
