load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "adapter_catalog.go",
        "catalog.go",
        "catalog_factory.go",
        "catalog_map.go",
        "config.go",
        "endpoint.go",
        "error.go",
        "external_catalog.go",
        "external_registry.go",
        "inmem_catalog.go",
        "instance.go",
        "mock_external_registry.go",
        "multi_catalog.go",
        "redis_registry.go",
        "replicated_catalog.go",
        "replication_handler.go",
        "service.go",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/api:go_default_library",
        "//pkg/auth:go_default_library",
        "//registry/replication:go_default_library",
        "//registry/utils/channels:go_default_library",
        "//registry/utils/database:go_default_library",
        "//registry/utils/logging:go_default_library",
        "@com_github_Sirupsen_logrus//:go_default_library",
        "@com_github_garyburd_redigo//redis:go_default_library",
        "@com_github_rcrowley_go_metrics//:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = [
        "catalog_map_test.go",
        "config_test.go",
        "endpoint_test.go",
        "external_catalog_test.go",
        "external_registry_test.go",
        "inmem_catalog_test.go",
        "instance_test.go",
        "multi_catalog_test.go",
        "redis_registry_test.go",
    ],
    library = ":go_default_library",
    deps = [
        "//pkg/auth:go_default_library",
        "//registry/cluster:go_default_library",
        "//registry/replication:go_default_library",
        "//registry/utils/database:go_default_library",
        "//registry/utils/logging:go_default_library",
        "@com_github_rcrowley_go_metrics//:go_default_library",
        "@com_github_stretchr_testify//assert:go_default_library",
    ],
)
