load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "config.go",
        "default.go",
        "flags.go",
        "validation.go",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_Sirupsen_logrus//:go_default_library",
        "@com_github_miekg_dns//:go_default_library",
        "@com_github_urfave_cli//:go_default_library",
        "@in_gopkg_yaml_v2//:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = [
        "config_suite_test.go",
        "config_test.go",
    ],
    library = ":go_default_library",
    deps = [
        "@com_github_onsi_ginkgo//:go_default_library",
        "@com_github_onsi_gomega//:go_default_library",
        "@com_github_urfave_cli//:go_default_library",
    ],
)
