load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["server.go"],
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/api:go_default_library",
        "//sidecar/util:go_default_library",
        "@com_github_Sirupsen_logrus//:go_default_library",
        "@com_github_miekg_dns//:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["server_test.go"],
    library = ":go_default_library",
    deps = [
        "//pkg/api:go_default_library",
        "@com_github_miekg_dns//:go_default_library",
        "@com_github_stretchr_testify//suite:go_default_library",
    ],
)
