load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "adapter.go",
        "envoyadapter.go",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/api:go_default_library",
        "//sidecar/config:go_default_library",
        "//sidecar/identity:go_default_library",
        "//sidecar/proxy/envoy:go_default_library",
        "//sidecar/proxy/envoy/discovery:go_default_library",
        "//sidecar/proxy/monitor:go_default_library",
        "@com_github_Sirupsen_logrus//:go_default_library",
    ],
)
