load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "healthchecker.go",
        "registration.go",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/api:go_default_library",
        "//registry/client:go_default_library",
        "//sidecar/identity:go_default_library",
        "//sidecar/register/healthcheck:go_default_library",
        "@com_github_Sirupsen_logrus//:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = [
        "healthchecker_test.go",
        "registration_test.go",
    ],
    library = ":go_default_library",
    deps = [
        "//pkg/api:go_default_library",
        "//sidecar/register/healthcheck:go_default_library",
        "@com_github_onsi_ginkgo//:go_default_library",
        "@com_github_onsi_gomega//:go_default_library",
        "@com_github_stretchr_testify//mock:go_default_library",
    ],
)

go_test(
    name = "go_default_xtest",
    srcs = ["suite_test.go"],
    deps = [
        "@com_github_onsi_ginkgo//:go_default_library",
        "@com_github_onsi_gomega//:go_default_library",
    ],
)
