load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "appsupervisor.go",
        "init.go",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//sidecar/config:go_default_library",
        "//sidecar/register:go_default_library",
        "@com_github_Sirupsen_logrus//:go_default_library",
    ],
)
