load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["client_bx.go"],
    visibility = ["//visibility:private"],
    deps = [
        "//pkg/api:go_default_library",
        "//registry/client:go_default_library",
        "@com_github_Sirupsen_logrus//:go_default_library",
    ],
)

go_binary(
    name = "test",
    library = ":go_default_library",
    visibility = ["//visibility:public"],
)
