load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "accesslog.go",
        "auth.go",
        "context.go",
        "gzip.go",
        "metrics.go",
        "secure.go",
        "trace.go",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/auth:go_default_library",
        "//registry/server/env:go_default_library",
        "//registry/server/protocol:go_default_library",
        "//registry/utils/i18n:go_default_library",
        "//registry/utils/logging:go_default_library",
        "@com_github_Sirupsen_logrus//:go_default_library",
        "@com_github_ant0ine_go_json_rest//rest:go_default_library",
        "@com_github_rcrowley_go_metrics//:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = [
        "auth_test.go",
        "secure_test.go",
    ],
    library = ":go_default_library",
    deps = [
        "//pkg/auth:go_default_library",
        "@com_github_ant0ine_go_json_rest//rest:go_default_library",
        "@com_github_stretchr_testify//assert:go_default_library",
    ],
)
