load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "catalog.go",
        "client.go",
        "factory.go",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/auth:go_default_library",
        "//registry/server/protocol/eureka:go_default_library",
        "//registry/store:go_default_library",
        "//registry/utils/logging:go_default_library",
        "@com_github_Sirupsen_logrus//:go_default_library",
    ],
)
