load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "database.go",
        "mock_database.go",
        "redis_database.go",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//registry/utils/logging:go_default_library",
        "@com_github_Sirupsen_logrus//:go_default_library",
        "@com_github_garyburd_redigo//redis:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["redis_database_test.go"],
    library = ":go_default_library",
    deps = [
        "@com_github_stretchr_testify//assert:go_default_library",
        "@com_github_stretchr_testify//mock:go_default_library",
    ],
)
