load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "manager.go",
        "resources.go",
        "service.go",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/api:go_default_library",
        "//sidecar/config:go_default_library",
        "//sidecar/identity:go_default_library",
        "//sidecar/util:go_default_library",
        "@com_github_Sirupsen_logrus//:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["manager_test.go"],
    library = ":go_default_library",
    deps = [
        "//pkg/api:go_default_library",
        "//sidecar/config:go_default_library",
        "@com_github_stretchr_testify//assert:go_default_library",
        "@in_gopkg_yaml_v2//:go_default_library",
    ],
)
